--- a/BlackjackStrategies.Tests/BlackjackStrategies.Tests.csproj
+++ b/BlackjackStrategies.Tests/BlackjackStrategies.Tests.csproj
@@ -1,33 +1,35 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
 
-    <IsPackable>false</IsPackable>
-    <IsTestProject>true</IsTestProject>
-  </PropertyGroup>
+        <IsPackable>false</IsPackable>
+        <IsTestProject>true</IsTestProject>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
-    <PackageReference Include="FluentAssertions" Version="6.12.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="Moq" Version="4.20.70" />
-    <PackageReference Include="xunit" Version="2.5.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="AutoFixture" Version="5.0.0-preview0012"/>
+        <PackageReference Include="AutoFixture.AutoMoq" Version="5.0.0-preview0012"/>
+        <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="FluentAssertions" Version="8.1.1"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
+        <PackageReference Include="Moq" Version="4.20.72"/>
+        <PackageReference Include="xunit" Version="2.9.3"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\BlackjackStrategies.API\BlackjackStrategies.API.csproj" />
-    <ProjectReference Include="..\BlackjackStrategies.Application\BlackjackStrategies.Application.csproj" />
-    <ProjectReference Include="..\BlackjackStrategies.Domain\BlackjackStrategies.Domain.csproj" />
-    <ProjectReference Include="..\BlackjackStrategies.Infrastructure\BlackjackStrategies.Infrastructure.csproj" />
-    <ProjectReference Include="..\BlackjackStrategies.UI\BlackjackStrategies.UI.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\BlackjackStrategies.API\BlackjackStrategies.API.csproj"/>
+        <ProjectReference Include="..\BlackjackStrategies.Application\BlackjackStrategies.Application.csproj"/>
+        <ProjectReference Include="..\BlackjackStrategies.Domain\BlackjackStrategies.Domain.csproj"/>
+        <ProjectReference Include="..\BlackjackStrategies.Infrastructure\BlackjackStrategies.Infrastructure.csproj"/>
+        <ProjectReference Include="..\BlackjackStrategies.UI\BlackjackStrategies.UI.csproj"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <Using Include="Xunit" />
-  </ItemGroup>
+    <ItemGroup>
+        <Using Include="Xunit"/>
+    </ItemGroup>
 
 </Project>
